# vk

./: .gitignore  Cargo.toml  build.rs
assets/: suzanne.glb
shaders/: ao.slang  ao_reproject.slang  deferred.slang  depth_downsample.slang  main.slang  mandelbrot.slang  postfx.slang  shadow.slang  triangle.slang
shaders/utils/: common.slang  helper.slang
src/: app.rs  camera.rs  config.rs  input.rs  main.rs  renderer.rs  scene.rs  screen.rs
src/utils/: buffer.rs  context.rs  image.rs  mod.rs
